# shellyconch

./: .gitignore  README.md  key-design-decisions.md  publish.py  pyproject.toml  regenerate_models.py  requirements.txt  setup.py
docs/: usage.md
shelly/: __init__.py  auth.py  base.py  cloud.py  device.py  discovery.py  exceptions.py  gen1.py  gen2.py  models.py
tests/: conftest.py  test_auth.py  test_base.py  test_cloud.py  test_device.py  test_discovery.py  test_exceptions.py  test_gen1.py  test_gen2.py  test_models.py
