[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellyconch"
dynamic = ["version"]
description = "Python library for discovering and controlling Shelly smart home devices over HTTP (local LAN + Shelly Cloud)."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Lorenzo P." },
]
keywords = ["shelly", "smart-home", "iot", "home-automation", "mdns", "zeroconf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.26.0",
    "zeroconf>=0.38.0",
]

[project.urls]
Homepage = "https://github.com/ilpersi/shellyconch"
Repository = "https://github.com/ilpersi/shellyconch"
Issues = "https://github.com/ilpersi/shellyconch/issues"

[tool.setuptools.packages.find]
include = ["shelly*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.dynamic]
version = { attr = "shelly.__version__" }
